# policyengine-api-v2

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  changelog_entry.yaml  common.mk  server_common.mk  test.ipynb  test.py
libs/poetry-plugin-openapi-generator/: README.md  pyproject.toml
libs/poetry-plugin-openapi-generator/poetry_plugin_openapi_generator/: __init__.py
projects/policyengine-api-full/: .env.example  API_REFACTOR_SUMMARY.md  DATABASE_SETUP.md  Dockerfile  Makefile  README.md  README_MIGRATION.md  REFACTOR_SUMMARY.md  USAGE_GUIDE.md  generate_clients.py  pyproject.toml
projects/policyengine-api-full-integ/: pyproject.toml
projects/policyengine-api-full-integ/tests/: test_ping.py
projects/policyengine-api-full/integration_tests/: test_ping.py
projects/policyengine-api-full/scripts/: add_quantile_fields.py  create_tables.py  init_database.py  init_db_simple.py  migrate_add_api_tables.py
projects/policyengine-api-full/src/policyengine_api/api/: __init__.py
projects/policyengine-api-full/src/policyengine_api_full/: auth.py  database.py  main.py  schemas.py  settings.py
projects/policyengine-api-full/src/policyengine_api_full/api/: __init__.py  country.py  database_router.py
projects/policyengine-api-full/src/policyengine_api_full/models/: __init__.py  report.py  report_element.py  user.py  user_dataset.py  user_dynamic.py  user_policy.py  user_report.py  user_simulation.py
projects/policyengine-api-full/src/policyengine_api_full/routers/: aggregate_changes.py  aggregates.py  baseline_variables.py  data_requests.py  datasets.py  dynamics.py  model_versions.py  models.py  parameters.py  policies.py  report_elements.py  report_elements_ai.py  reports.py  simulations.py  user_datasets.py  user_policies.py  user_simulations.py  users.py  variables.py
projects/policyengine-api-full/src/policyengine_api_full/scripts/: create_dev_user.py
projects/policyengine-api-full/tests/: test_api_backwards_compatibility.py  test_database_migration.py
projects/policyengine-api-full/tests/api/: test_uk_behavioral_response.py
projects/policyengine-api-full/tests/api/household/: test_household.py  test_user.py
projects/policyengine-api-simulation/: Dockerfile  Makefile  README.md  README_LOCAL_DEV.md  generate_clients.py  pyproject.toml  queue_worker.py  test_simulation.py  workflow.yaml
projects/policyengine-api-simulation/fixtures/: test_country_package_update_scripts.py  test_logfire_integration.py  test_policyengine_package_update_scripts.py  test_simulation_api_contracts.py
projects/policyengine-api-simulation/fixtures/gateway/: shared.py  test_endpoints.py
projects/policyengine-api-simulation/scripts/: bump_version.py
projects/policyengine-api-simulation/src/modal/: __init__.py  _image_setup.py  app.py  artifact_store.py  budget_window_batch.py  budget_window_results.py  budget_window_scheduler.py  budget_window_state.py  config.py  config_utils.py  hf_dataset.py  logging_redaction.py  observability.py  orchestration.py  policyengine_dependency.py  release_bundle.py  simulation.py  simulation_macro_output.py  simulation_macro_output_builder.py  simulation_output_adapter.py  simulation_output_builder.py  telemetry.py  tracer_capture.py
projects/policyengine-api-simulation/src/modal/gateway/: __init__.py  (+8 more)
projects/policyengine-api-simulation/src/policyengine_api_simulation/: __init__.py  compat_models.py  dataset_uri.py  main.py  release_bundle.py  settings.py  simulation.py  simulation_macro_output.py  simulation_output_budget.py  simulation_output_builder.py  simulation_output_cliff.py  simulation_output_distribution.py  simulation_output_geographic.py  simulation_output_inequality.py  simulation_output_labor.py  simulation_output_poverty.py  simulation_runtime.py  version_catalog.py
projects/policyengine-api-simulation/tests/: conftest.py  test_artifact_store.py  test_budget_window_batch.py  test_budget_window_context.py  test_budget_window_results.py  test_budget_window_scheduler.py  test_budget_window_semi_integration.py  test_country_package_update_scripts.py  test_dataset_uri.py  test_gcp_credentials.py  test_hf_dataset.py  test_logfire_integration.py  test_modal_bundle_image.py  test_modal_deploy_workflow.py  test_modal_observability.py  test_modal_scripts.py  test_modal_simulation.py  test_modal_telemetry.py  test_orchestration.py  test_placeholder.py  test_policyengine_dependency_source.py  test_policyengine_package_update_scripts.py  test_release_bundle.py  test_settings.py  test_simulation_api_contracts.py  test_simulation_output_adapter.py  test_simulation_output_builder.py  test_simulation_output_shape.py  test_simulation_versioning.py  test_standalone_simulation_contract.py  test_tracer_capture.py  test_update_version_registry.py  test_version_catalog.py
projects/policyengine-api-simulation/tests/fixtures/: __init__.py  budget_window_outputs.py  endpoints.py  orchestration.py
projects/policyengine-api-simulation/tests/gateway/: conftest.py  test_auth.py  test_budget_window_state.py  test_endpoints.py  test_errors.py  test_models.py  test_observation.py  test_package_imports.py  test_responses.py
projects/policyengine-api-simulation/tests/internal_observability/: test_clients.py  test_router.py
projects/policyengine-api-tagger/: Dockerfile  pyproject.toml
projects/policyengine-api-tagger/src/policyengine_api_tagger/: main.py
projects/policyengine-api-tagger/tests/api/: conftest.py  integration_test.py  test_cleanup_integration.py  test_revision_cleanup.py
projects/policyengine-apis-integ/: Makefile  out  pyproject.toml  request.json
projects/policyengine-apis-integ/tests/full/: conftest.py  test_ping.py
projects/policyengine-apis-integ/tests/simulation/: conftest.py  test_auth_smoke.py  test_budget_window.py  test_calculate.py  test_calculate_cliffs.py  test_ping.py
projects/policyengine-apis-integ/tests/simulation_workflow/: conftest.py  test_calculate.py
projects/policyengine-apis-integ/tests/tagger/: conftest.py  test_cleanup.py
projects/policyengine-apis-integ/tests/utils/: retry_503.py
(+137 files in other folders)
