[project]
name = "policyengine-api-full"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
policyengine-api = {develop = true}

#Although it will let you add "develop = true" here, it doesn't work for plugins.
# net result is you HAVE to clean poetry and reinstall if you change the plugin.
[tool.poetry.requires-plugins]
poetry-plugin-openapi-generator = {path = "../../libs/poetry-plugin-openapi-generator"}
