[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyengine-simulation-api-project"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "PolicyEngine", email = "hello@policyengine.org"},
]
license = {file = "../../LICENSE"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "opentelemetry-instrumentation-sqlalchemy (>=0.51b0,<0.52)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "opentelemetry-instrumentation-fastapi (>=0.51b0,<0.52)",
    "policyengine-fastapi",
    "policyengine==0.13.0",
    "policyengine-core>=3.23.5",
    "policyengine-uk==2.88.20",
    "policyengine-us==1.702.0",
    "tables>=3.10.2",
    "modal>=0.73.0",
    "logfire>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/policyengine_api_simulation", "src/policyengine_api"]

[tool.uv.sources]
policyengine-fastapi = { path = "../../libs/policyengine-fastapi", editable = true }

[project.optional-dependencies]
test = [ "pytest>=8.3.4", "pytest-asyncio>=0.25.3", "pytest-cov>=6.1.1",]
build = [ "pyright>=1.1.401", "black>=25.1.0", "openapi-python-client>=0.21.6",]
release = [ "towncrier>=24.8.0",]

[tool.towncrier]
package = "policyengine_api_simulation"
directory = "changelog.d"
filename = "CHANGELOG.md"
title_format = "## [{version}] - {project_date}"
issue_format = ""
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[tool.pytest.ini_options]
pythonpath = [
  "src",
]

testpaths = ["tests"]

# Skip real-Modal integration smoke tests unless the operator explicitly
# opts in with ``-m integration``. The default test run stays hermetic.
addopts = "-m 'not integration'"
markers = [
  "integration: runs against a real (ephemeral) Modal deployment",
]
